_frontend/css/layout.css
/**
 * TODOS
 *  - Nav Menu items have a weird and not ideal click area
 *  - Do i want a larger XL size that puts the sidebar to the right as a full
 *    height thing?
 *  -
 *
 **/
.expandable {
  @apply bg-gray-800 overflow-hidden absolute left-0 w-full px-4;

  top: 4rem;

  transition: max-height 0.5s ease-in-out;
  max-height: 0px;

  &.expand {
    max-height: 100vh;
  }
}

@screen lg {
  .expandable {
    @apply relative mt-2 p-0;

    top: initial;
    max-height: initial;
  }
}

.sidebar-nav {
  @apply w-full bg-gray-800 flex flex-row content-center justify-between items-baseline p-4 h-full border-0 border-b border-gray-700;

  & h2 {
    @apply text-2xl font-bold leading-tight text-gray-200 m-0;

    & a, & a:visited {
      @apply text-gray-200;
    }
  }
}

@screen lg {
  .sidebar-nav {
    @apply justify-center flex-col items-center h-auto border-0;
  }
}

ul.nav-list {
  @apply list-none px-0 py-2 w-full font-sans;

  & .list-divider {
    @apply my-1 border-b border-gray-700;
  }
}

@screen lg {
  ul.nav-list {
    @apply p-0;
  }
}

.nav-item {
  @apply cursor-pointer text-gray-200 rounded p-2;

  &:hover, &.active {
    @apply text-white bg-gray-900;

    & a {
      @apply text-white;
    }
  }

  & a {
    @apply block w-full rounded text-gray-200;

    &:visited {
      @apply text-white;
    }
  }
}

.hamburger-bun {
  @apply flex flex-row justify-around;
}

@screen lg {
  .hamburger-bun {
    @apply hidden;
  }
}

body {
  @apply grid;

  grid:
    "sidebar" auto
    "content" auto
    / 100%;
}

@screen lg {
  body {
    @apply mx-auto;
    max-width: 1000px;

    grid:
      "content sidebar" 8rem
      "content aside" auto
      / calc(100% - 16rem) 16rem;
  }
}

#main-sidebar {
  @apply w-full flex flex-col sticky top-0;

  grid-area: sidebar;
}

@screen lg {
  #main-sidebar {
  }
}

main {
  grid-area: content;

  @apply flex flex-col mx-4;
}

@screen lg {
  main {
    @apply ml-0 mr-4;
  }
}

#page-header {
  /*grid-area: content;*/

  @apply flex flex-col border-b-2 border-gray-200 mb-4 py-2;

  & h1 {
    @apply text-gray-900 text-4xl m-0;
  }
}

@screen lg {
  #page-header {
    @apply flex-row justify-between items-baseline mx-0;
  }
}

